--- a/projects_settings.yml
+++ b/projects_settings.yml
@@ -1,8 +1,8 @@
 projects:
-  name: Testing
-  description: Testing delle nuove funzionalità
-  documents:
-    - anagrafe-docs
-    - design-docs
-    - docs-italia-demo
+  - name: Testing
+    description: Testing delle nuove funzionalità
+    documents:
+      - anagrafe-docs
+      - design-docs
+      - docs-italia-demo
 
